syntax = "proto3";

option go_package = ".;pb";

message RateRequest {
    enum Currencies {
        EUR=0;
        USD=1;
        JPY=2;
    }
    Currencies base = 1;
    Currencies destination = 2;
}

message RateResponse {
    float rate = 1;
}

service Currency {
    rpc GetRate(RateRequest) returns (RateResponse);
}

